--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sequence-edits"
-version = "0.1.2"
+version = "0.1.1"
 authors = [
-    {name="Marcel Claramunt", email="marcel@marcelclaramunt.cat"}
+    {name="Marcel Claramunt", email="marcel@moveread.com"}
 ]
-description = "Tools for encoding/decoding sequence editions (insertions/deletions) in compact format. Supports pydantic models to send over the wire"
+description = "Tools for encoding/decoding sequence editions (insertions/deletions) in compact format"
 dependencies = [
     "ramda", "pydantic"
 ]
