--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sequence-edits"
-version = "0.1.5"
+version = "0.1.8"
 authors = [
   {name="Marcel Claramunt", email="marcel@moveread.com"}
 ]
-description = "Tools for encoding/decoding sequence editions (insertions/deletions) in compact forma"
+description = "Compressed representation of sequence edits"
 dependencies = [
   
 ]
@@ -16,4 +16,10 @@ requires-python = ">=3.10"
 readme = {file="README.md", content-type="text/markdown"}
 
 [project.urls]
-repo = "https://github.com/moveread/sequence-edits"
+repo = "https://github.com/moveread/sequence-edits.git"
+
+# [project.optional-dependencies]
+# test = [
+#   "pytest < 5.0.0",
+#   "pytest-cov[all]"
+# ]
